navbar image overflow problem fixed

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -1,3 +1,7 @@
+nav {
+	height: 65px;
+}
+
 .parallax-container {
   height: 500px !important;
 }
